--- a/#src/index.html
+++ b/#src/index.html
@@ -81,6 +81,54 @@
 		</div>
 	</section>
 
+
+	<section class="calculator">
+		<div class="calculator__container container">
+			<h4 class="calculator__title title-h2">Онлайн-калькулятор</h4>
+			<div class="calculator__row row">
+				<div class="calculator__left">
+					<div class="calculator__num-slider num-slider">
+						<div class="num-slider__heading">
+							<span>Сумма займа</span>
+						</div>
+						<div class="num-slider__row row">
+							<div id="sumSlider" class="num-slider__slider"></div>
+							<input type="text" id="inputSumSlider" class="num-slider__input">
+						</div>
+					</div>
+					<div class="calculator__num-slider num-slider">
+						<div class="num-slider__heading">
+							<span>Срок займа</span>
+						</div>
+						<div class="num-slider__row row">
+							<div id="daySlider" class="num-slider__slider"></div>
+							<input type="text" id="inputDaySlider" class="num-slider__input">
+						</div>
+					</div>
+				</div>
+				<div class="calculator__right">
+					<div class="calculator__card calculator-sum">
+						<div class="calculator-sum__price">
+							<div class="calculator-sum__text">Сумма к возврату</div>
+							<div class="calculator-sum__result"><span>32 500</span> ₽</div>
+						</div>
+						<div class="calculator-sum__date">
+							<div class="calculator-sum__text">Дата погашения</div>
+							<div class="calculator-sum__result"><span>05.01.2021 </span> г.</div>
+						</div>
+						<div class="calculator-sum__actions">
+							<a href="#request" class="calculator-sum__btn btn popup-link">Оставить заявку на займ</a>
+							<a href="#request" class="calculator-sum__btn-more btn btn-more">
+								<span>Подробнее о займах</span>
+								<i class="icon-arrow-link-right"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<br>
 	<br>
 	<br>
