--- a/#src/html-components/_footer.html
+++ b/#src/html-components/_footer.html
@@ -1,5 +1,52 @@
-<footer class="site__footer">
-
+<footer class="site__footer footer">
+    <div class="footer__container container">
+        <div class="footer__row">
+            <div class="footer__left">
+                <div class="footer__logo logo">
+                    <a href="/" class="logo__link">
+                        <div class="logo__img">
+                            <img src="img/logo.svg" alt="">
+                        </div>
+                    </a>
+                </div>
+                <div class="footer__copyright">© Мосзайм</div>
+                <a href="" class="footer__btn btn-more">
+                    <span>Поддержка физ. лиц во время пандемии</span>
+                    <i class="icon-arrow-link-right"></i>
+                </a>
+            </div>
+            <div class="footer__center">
+                <div class="footer__menu menu">
+                    <ul class="footer__list menu__list">
+                        <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">Мосзайм в городах</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">Карьера</a></li>
+                    </ul>
+                    <ul class="footer__list menu__list menu__list--uppercase menu__list--row">
+                        <li class="menu__item"><a href="" class="menu__link">МИКРОЗАЙМЫ</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">ВОПРОС / ОТВЕТ</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">СРОЧНЫЙ ЗАЙМ</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">БЛОГ</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">ПОЛУЧЕНИЕ ЗАЙМА</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__right">
+                <div class="footer__contact">
+                    <a href="mailto:info@mos-zaim.ru" class="footer__link">info@mos-zaim.ru</a>
+                </div>
+                <div class="footer__contact">
+                    <a href="tel:+79999763324" class="footer__link">+7 (999) 976-33-24</a>
+                    <div class="footer__contact-label">Звонок по РФ бесплатный</div>
+                </div>
+                <div class="footer__contact">
+                    <div class="footer__address">Самара, Улица Мориса&nbsp;Тореза, Дом&nbsp;21, Квартира&nbsp;52</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
 </div>
