--- a/#src/html-components/_header.html
+++ b/#src/html-components/_header.html
@@ -44,11 +44,11 @@
                         </div>
                         <div class="header-menu__bottom">
                             <ul class="header-menu__list menu__list menu__list--uppercase">
-                                <li class="menu__item"><a href="" class="menu__link">Виды займов</a></li>
+                                <li class="menu__item active"><a href="loans.html" class="menu__link">Виды займов</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">ПОЛУЧЕНИЕ ЗАЙМА</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">ВОПРОС / ОТВЕТ</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">БЛОГ</a></li>
-                                <li class="menu__item"><a href="" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
+                                <li class="menu__item menu__item--red"><a href="" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
                             </ul>
                         </div>
                     </div>
