--- a/#src/routing.html
+++ b/#src/routing.html
@@ -11,6 +11,7 @@
     <nav class="header__menu">
         <ul class="header__list">
             <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
+            <li class="header__item"><a href="loans.html" class="header__link">Виды займов</a></li>
         </ul>
     </nav>
 </body>
