--- a/#src/routing.html
+++ b/#src/routing.html
@@ -12,6 +12,7 @@
         <ul class="header__list">
             <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
             <li class="header__item"><a href="loans.html" class="header__link">Виды займов</a></li>
+            <li class="header__item"><a href="about.html" class="header__link">О нас</a></li>
         </ul>
     </nav>
 </body>
