--- a/#src/html-components/_header.html
+++ b/#src/html-components/_header.html
@@ -32,7 +32,7 @@
                         <div class="header-menu__top">
                             <a href="" class="header-menu__btn btn btn-red" data-da="header__body, 1, 767">Заказать звонок</a>
                             <ul class="header-menu__list menu__list">
-                                <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+                                <li class="menu__item"><a href="about.html" class="menu__link">О нас</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Мосзайм в городах</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Карьера</a></li>
