--- a/#src/routing.html
+++ b/#src/routing.html
@@ -13,6 +13,9 @@
             <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
             <li class="header__item"><a href="loans.html" class="header__link">Виды займов</a></li>
             <li class="header__item"><a href="about.html" class="header__link">О нас</a></li>
+            <li class="header__item"><a href="contacts.html" class="header__link">Контакты</a></li>
+            <li class="header__item"><a href="cities.html" class="header__link">Мосзайм в городах</a></li>
+            <li class="header__item"><a href="vacancies.html" class="header__link">Карьера</a></li>
         </ul>
     </nav>
 </body>
