--- a/#src/index.html
+++ b/#src/index.html
@@ -3,7 +3,7 @@
 })
 
 <main class="site__main">
-	<section class="main">
+	<section class="main first-section">
 		<div class="main__container container">
 			<div class="main__row">
 				<div class="main__slider">
