--- a/#src/loans.html
+++ b/#src/loans.html
@@ -3,7 +3,7 @@
 })
 
 <main class="site__main">
-	<section class="main main--text">
+	<section class="main main--text first-section">
 		<div class="main__container container">
 			<div class="main__row">
 				<div class="main__slider">
