loan-obtaining page and blog page

--- a/#src/routing.html
+++ b/#src/routing.html
@@ -16,6 +16,8 @@
             <li class="header__item"><a href="contacts.html" class="header__link">Контакты</a></li>
             <li class="header__item"><a href="cities.html" class="header__link">Мосзайм в городах</a></li>
             <li class="header__item"><a href="vacancies.html" class="header__link">Карьера</a></li>
+            <li class="header__item"><a href="loan-obtaining.html" class="header__link">Получение займа</a></li>
+            <li class="header__item"><a href="blog.html" class="header__link">Блог</a></li>
         </ul>
     </nav>
 </body>
