--- a/#src/blog.html
+++ b/#src/blog.html
@@ -9,7 +9,7 @@
 				<div class="blog__item">
 					<div class="blog__item-wrapper">
 						<div class="blog__date">20.12.2020</div>
-						<a href="" class="blog__title title-h3">Финансист: кто это и чем занимается</a>
+						<a href="article.html" class="blog__title title-h3">Финансист: кто это и чем занимается</a>
 						<div class="blog__excerpt">
 							Управлять финансами предприятия, законно получать финансирование и контролировать
 							кредитования и своевременную уплату взносов и налогов в компании не просто. Для этого,
@@ -18,7 +18,7 @@
 							главное...
 						</div>
 						<div class="blog__button">
-							<a href="" class="blog__btn btn btn-more">
+							<a href="article.html" class="blog__btn btn btn-more">
 								<span>Читать полностью</span>
 								<i class="icon-arrow-link-right"></i>
 							</a>
@@ -28,7 +28,7 @@
 				<div class="blog__item">
 					<div class="blog__item-wrapper">
 						<div class="blog__date">20.12.2020</div>
-						<a href="" class="blog__title title-h3">Блокировка счёта: что это и как её избежать</a>
+						<a href="article.html" class="blog__title title-h3">Блокировка счёта: что это и как её избежать</a>
 						<div class="blog__excerpt">
 							Сегодня мы поговорим о том, что такое блокировка счёта и как её избежать, ведь эта тема
 							является довольно актуальной. Большинство организаций и индивидуальных предпринимателей для
@@ -37,7 +37,7 @@
 							являются...
 						</div>
 						<div class="blog__button">
-							<a href="" class="blog__btn btn btn-more">
+							<a href="article.html" class="blog__btn btn btn-more">
 								<span>Читать полностью</span>
 								<i class="icon-arrow-link-right"></i>
 							</a>
@@ -47,7 +47,7 @@
 				<div class="blog__item">
 					<div class="blog__item-wrapper">
 						<div class="blog__date">20.12.2020</div>
-						<a href="" class="blog__title title-h3">Займ в Митино на выгодных условиях, наличными или
+						<a href="article.html" class="blog__title title-h3">Займ в Митино на выгодных условиях, наличными или
 							переводом на банковскую карту</a>
 						<div class="blog__excerpt">
 							Получить займ в Митино наличными с доставкой на дом, без поручителей, без залога, без
@@ -56,7 +56,7 @@
 							надо занимать. Но у кого? Даже не приходит в голову, придется искать по друзьям...
 						</div>
 						<div class="blog__button">
-							<a href="" class="blog__btn btn btn-more">
+							<a href="article.html" class="blog__btn btn btn-more">
 								<span>Читать полностью</span>
 								<i class="icon-arrow-link-right"></i>
 							</a>
@@ -66,7 +66,7 @@
 				<div class="blog__item">
 					<div class="blog__item-wrapper">
 						<div class="blog__date">20.12.2020</div>
-						<a href="" class="blog__title title-h3">Финансист: кто это и чем занимается</a>
+						<a href="article.html" class="blog__title title-h3">Финансист: кто это и чем занимается</a>
 						<div class="blog__excerpt">
 							Управлять финансами предприятия, законно получать финансирование и контролировать
 							кредитования и своевременную уплату взносов и налогов в компании не просто. Для этого,
@@ -75,7 +75,7 @@
 							главное...
 						</div>
 						<div class="blog__button">
-							<a href="" class="blog__btn btn btn-more">
+							<a href="article.html" class="blog__btn btn btn-more">
 								<span>Читать полностью</span>
 								<i class="icon-arrow-link-right"></i>
 							</a>
@@ -85,7 +85,7 @@
 				<div class="blog__item">
 					<div class="blog__item-wrapper">
 						<div class="blog__date">20.12.2020</div>
-						<a href="" class="blog__title title-h3">Блокировка счёта: что это и как её избежать</a>
+						<a href="article.html" class="blog__title title-h3">Блокировка счёта: что это и как её избежать</a>
 						<div class="blog__excerpt">
 							Сегодня мы поговорим о том, что такое блокировка счёта и как её избежать, ведь эта тема
 							является довольно актуальной. Большинство организаций и индивидуальных предпринимателей для
@@ -94,7 +94,7 @@
 							являются...
 						</div>
 						<div class="blog__button">
-							<a href="" class="blog__btn btn btn-more">
+							<a href="article.html" class="blog__btn btn btn-more">
 								<span>Читать полностью</span>
 								<i class="icon-arrow-link-right"></i>
 							</a>
@@ -104,7 +104,7 @@
 				<div class="blog__item">
 					<div class="blog__item-wrapper">
 						<div class="blog__date">20.12.2020</div>
-						<a href="" class="blog__title title-h3">Займ в Митино на выгодных условиях, наличными или
+						<a href="article.html" class="blog__title title-h3">Займ в Митино на выгодных условиях, наличными или
 							переводом на банковскую карту</a>
 						<div class="blog__excerpt">
 							Получить займ в Митино наличными с доставкой на дом, без поручителей, без залога, без
@@ -113,7 +113,7 @@
 							надо занимать. Но у кого? Даже не приходит в голову, придется искать по друзьям...
 						</div>
 						<div class="blog__button">
-							<a href="" class="blog__btn btn btn-more">
+							<a href="article.html" class="blog__btn btn btn-more">
 								<span>Читать полностью</span>
 								<i class="icon-arrow-link-right"></i>
 							</a>
