--- a/#src/html-components/_footer.html
+++ b/#src/html-components/_footer.html
@@ -29,7 +29,7 @@
                         <li class="menu__item"><a href="" class="menu__link">СРОЧНЫЙ ЗАЙМ</a></li>
                         <li class="menu__item"><a href="" class="menu__link">БЛОГ</a></li>
                         <li class="menu__item"><a href="" class="menu__link">ПОЛУЧЕНИЕ ЗАЙМА</a></li>
-                        <li class="menu__item"><a href="" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
+                        <li class="menu__item menu__item--red"><a href="" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
                     </ul>
                 </div>
             </div>
