--- a/#src/html-components/_header.html
+++ b/#src/html-components/_header.html
@@ -46,9 +46,9 @@
                             <ul class="header-menu__list menu__list menu__list--uppercase">
                                 <li class="menu__item active"><a href="loans.html" class="menu__link">Виды займов</a></li>
                                 <li class="menu__item"><a href="loan-obtaining.html" class="menu__link">ПОЛУЧЕНИЕ ЗАЙМА</a></li>
-                                <li class="menu__item"><a href="" class="menu__link">ВОПРОС / ОТВЕТ</a></li>
+                                <li class="menu__item"><a href="faq.html" class="menu__link">ВОПРОС / ОТВЕТ</a></li>
                                 <li class="menu__item"><a href="blog.html" class="menu__link">БЛОГ</a></li>
-                                <li class="menu__item menu__item--red"><a href="" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
+                                <li class="menu__item menu__item--red"><a href="amortization.html" class="menu__link">ПОГАШЕНИЕ ДОЛГА</a></li>
                             </ul>
                         </div>
                     </div>
