--- a/#src/routing.html
+++ b/#src/routing.html
@@ -18,6 +18,9 @@
             <li class="header__item"><a href="vacancies.html" class="header__link">Карьера</a></li>
             <li class="header__item"><a href="loan-obtaining.html" class="header__link">Получение займа</a></li>
             <li class="header__item"><a href="blog.html" class="header__link">Блог</a></li>
+            <li class="header__item"><a href="article.html" class="header__link">Статья</a></li>
+            <li class="header__item"><a href="faq.html" class="header__link">Вопрос\Ответ</a></li>
+            <li class="header__item"><a href="amortization.html" class="header__link">Погашение долга</a></li>
         </ul>
     </nav>
 </body>
